--- a/proposal.Rmd
+++ b/proposal.Rmd
@@ -78,55 +78,41 @@ USA_states <- map_data("state")
 sName <- USA_states %>%
   mutate(region=str_to_title(USA_states$region))
 
-head(sName)
+#head(sName)
 
-temp <- read.csv("ferWState.csv")
-foo <- temp %>%
-  mutate(region=setNames(state.name, state.abb)[state])
+#temp <- read.csv("ferWState.csv")
+#foo <- temp %>%
+#  mutate(region=setNames(state.name, state.abb)[state])
 
-str(foo)
+#str(foo)
 
-sName %>%
-  ggplot(aes(x=long, y=lat)) + geom_path(aes(group=group)) + geom_path(aes(group=group)) + coord_map()
+#sName %>%
+#  ggplot(aes(x=long, y=lat)) + geom_path(aes(group=group)) + geom_path(aes(group=group)) + coord_map()
 
-map1 <- foo %>%
-  left_join(sName, by="region")
+#map1 <- foo %>%
+#  left_join(sName, by="region")
 
-ggplot(map1, aes(x=long, y=lat, fill=temp2011)) + geom_polygon(aes(group=group)) + coord_map()
+#ggplot(map1, aes(x=long, y=lat, fill=temp2011)) + geom_polygon(aes(group=group)) + coord_map()
 
-temp2 <- read.csv("LymeTempPrec.csv")
-str(temp2)
+temp2 <- read.csv("LymeTempPrec2.csv")
 ltp <- temp2 %>%
   mutate(region=full) %>%
   select(!c('full'))
-str(ltp)
 
 ltp %>%
   left_join(sName, by="region") %>%
-  ggplot(aes(x=long, y=lat, fill=lyme0711)) + geom_polygon(aes(group=group)) + coord_map()
-
-
-
-USA_county <- map_data("county")
-str(USA_county)
-
-count1 <- read.csv("Data Sets/LymeDisease_9211_county (1).csv")
-count1 <- count1 %>% 
-  separate(CountyName, c("subregion", "county"))
-
-count1[is.na(count1)] <- 0
-
-str(count1)
-
-USA_county %>%
-  ggplot(aes(x=long, y=lat)) + geom_path(aes(group=group)) + geom_path(aes(group=group)) + coord_map()
-
-USA_county <- USA_county %>%
-  mutate(subregion=str_to_title(subregion))
-
-count1 %>%
-  left_join(USA_county, by='subregion') %>%
-  ggplot(aes(x=long, y=lat, fill=ConfirmedCount_2007_2011)) + geom_polygon(aes(group=group)) + coord_map()
+  ggplot(aes(x=long, y=lat, fill=lyme0711)) + geom_polygon(aes(group=group)) + coord_map() + scale_fill_gradient()
 ```
   
   * Does the Lyme Disease rate in the states influenced by the weather?
+  
+```{r message=FALSE, warning=FALSE}
+ltp %>%
+  left_join(sName, by="region") %>%
+  ggplot(aes(x=long, y=lat, fill=temp0711)) + geom_polygon(aes(group=group)) + coord_map() + scale_fill_gradient()
+
+ltp %>%
+  left_join(sName, by="region") %>%
+  ggplot(aes(x=long, y=lat, fill=prec0711)) + geom_polygon(aes(group=group)) + coord_map() + scale_fill_gradient()
+```  
+
