mapping states&counties with highest rates using 2007-2011 data

--- a/proposal.Rmd
+++ b/proposal.Rmd
@@ -93,30 +93,60 @@ USA_states <- map_data("state")
 sName <- USA_states %>%
   mutate(region=str_to_title(USA_states$region))
 
-#head(sName)
-
-#temp <- read.csv("ferWState.csv")
-#foo <- temp %>%
-#  mutate(region=setNames(state.name, state.abb)[state])
-
-#str(foo)
-
-#sName %>%
-#  ggplot(aes(x=long, y=lat)) + geom_path(aes(group=group)) + geom_path(aes(group=group)) + coord_map()
-
-#map1 <- foo %>%
-#  left_join(sName, by="region")
-
-#ggplot(map1, aes(x=long, y=lat, fill=temp2011)) + geom_polygon(aes(group=group)) + coord_map()
-
 temp2 <- read.csv("LymeTempPrec2.csv")
 ltp <- temp2 %>%
   mutate(region=full) %>%
   select(!c('full'))
 
-ltp %>%
-  left_join(sName, by="region") %>%
-  ggplot(aes(x=long, y=lat, fill=lyme0711)) + geom_polygon(aes(group=group)) + coord_map() + scale_fill_gradient()
+ltp2 <- ltp %>%
+  filter(lyme0711>1000)
+
+ltpmap <- ltp %>% left_join(sName, by="region")
+ltp2map <- ltp2 %>% left_join(sName, by="region")
+sText <- ltp2map %>% group_by(region, state) %>% summarise(long=mean(long), lat=mean(lat))
+  
+ggplot() + geom_path(data=ltpmap,
+                        aes(x=long, y=lat, group=group)) +
+  geom_polygon(data=ltp2map,
+                aes(x=long, y=lat, group=group, fill=lyme0711)) +
+  scale_fill_continuous(low='tomato', high='darkred', guide='colorbar') +
+  coord_map() +
+  geom_text(data=sText, 
+            aes(x=long, y=lat, label=state), color='black')
+
+#for county
+
+USA_counties <- map_data("county")
+cName <- USA_counties %>%
+  mutate(subregion=str_to_title(subregion))
+
+count1 <- read.csv("Data Sets/LymeDisease_9211_county (1).csv")
+countClean <- count1 %>% 
+  separate(CountyName, c("subregion", "county")) %>%
+  filter(!CountyCode==0) %>%
+  mutate(county=str_replace(county, "County", "")) %>%
+  unite('subregion',subregion:county,sep=" ") %>%
+  mutate(subregion=trimws(gsub("\\s+", " ", subregion))) %>%
+  mutate(c711=replace_na(ConfirmedCount_2007_2011, 0))
+
+countCleanSum <- countClean %>%
+  group_by(subregion) %>%
+  summarise(c711=sum(c711)) %>%
+  arrange(desc(c711))
+
+countCleanMap <- countCleanSum %>% 
+  left_join(cName, by='subregion') %>% 
+  filter(c711>100)
+
+countCleanMap <- countCleanMap %>%
+  filter(region %in% c('minnesota', 'wisconsin', 'virginia', 'maryland', 'pennsylvania', 'new jersey', 'new york', 'connecticut', 'massachusetts', 'maine', 'vermont', 'new hampshire'))
+
+ggplot() + geom_path(data=ltp2map,
+                        aes(x=long, y=lat, group=group)) +
+  geom_polygon(data=countCleanMap,
+                aes(x=long, y=lat, group=group, fill=c711), color='black') +
+  scale_fill_continuous(low='tomato', high='darkred', guide='colorbar') +
+  coord_map()
 ```
   
   * Does the Lyme Disease rate in the states influenced by the weather?
