--- a/proposal.Rmd
+++ b/proposal.Rmd
@@ -13,6 +13,10 @@ library(tidyverse)
 library(dplyr)
 library(lubridate)
 library(readxl)
+library(rvest)
+library(scales)
+library(reshape)
+library(RColorBrewer)
 ```
 
 ## Team Members
@@ -89,6 +93,21 @@ ggplot(Temp2,aes(y=reorder(State,Ave_Temp),weight=Ave_Temp)) + geom_bar() +
   
   * Which states have the highest rate of Lyme Disease?
 ```{r message=FALSE, warning=FALSE}
+#stack bar for region
+region <- read.csv("cumLymeReport_2007_2011_byRegion.csv")
+region <- region %>%
+  mutate(area=ï..Areas) %>%
+  select(!ï..Areas)
+
+regionpiv <- region %>%
+  pivot_longer(!area, names_to="cumu", values_to="value")
+str(regionpiv)
+
+regionpiv %>%
+  ggplot(aes(fill=cumu, y=value, x=reorder(area, value))) + 
+    geom_bar(position="stack", stat="identity") + coord_flip() + labs(title="52-week Cumulative of Lyme Disease cases by US Region", y="Total cases", x="Region") + scale_fill_discrete(name = "Cumulative cases per year", labels = c("2007", "2008", "2009", "2010", "2011"))
+
+#for state
 USA_states <- map_data("state")
 sName <- USA_states %>%
   mutate(region=str_to_title(USA_states$region))
@@ -112,7 +131,8 @@ ggplot() + geom_path(data=ltpmap,
   scale_fill_continuous(low='tomato', high='darkred', guide='colorbar') +
   coord_map() +
   geom_text(data=sText, 
-            aes(x=long, y=lat, label=state), color='black')
+            aes(x=long, y=lat, label=state), color='black') +
+  labs(title="US States With > 1000 Cases", fill="Total Cases")
 
 #for county
 
@@ -139,14 +159,17 @@ countCleanMap <- countCleanSum %>%
   filter(c711>100)
 
 countCleanMap <- countCleanMap %>%
-  filter(region %in% c('minnesota', 'wisconsin', 'virginia', 'maryland', 'pennsylvania', 'new jersey', 'new york', 'connecticut', 'massachusetts', 'maine', 'vermont', 'new hampshire'))
+  filter(region %in% c('minnesota', 'wisconsin', 'virginia', 'maryland', 'pennsylvania', 'new jersey', 'new york', 'connecticut', 'massachusetts', 'maine', 'vermont', 'new hampshire', 'delaware'))
 
 ggplot() + geom_path(data=ltp2map,
                         aes(x=long, y=lat, group=group)) +
   geom_polygon(data=countCleanMap,
                 aes(x=long, y=lat, group=group, fill=c711), color='black') +
   scale_fill_continuous(low='tomato', high='darkred', guide='colorbar') +
-  coord_map()
+  coord_map() +
+  labs(title="US Counties With > 100 Cases In The Northeast Central Region", fill="Total cases")
+
+
 ```
   
   * Does the Lyme Disease rate in the states influenced by the weather?
@@ -154,10 +177,14 @@ ggplot() + geom_path(data=ltp2map,
 ```{r message=FALSE, warning=FALSE}
 ltp %>%
   left_join(sName, by="region") %>%
-  ggplot(aes(x=long, y=lat, fill=temp0711)) + geom_polygon(aes(group=group)) + coord_map() + scale_fill_gradient()
+  ggplot(aes(x=long, y=lat, fill=temp0711)) + geom_polygon(aes(group=group)) + coord_map() + 
+  scale_fill_continuous(low='tan1', high='darkred', guide='colorbar') +
+  labs(title="Temperature Levels in US", fill="Temp (F)")
 
 ltp %>%
   left_join(sName, by="region") %>%
-  ggplot(aes(x=long, y=lat, fill=prec0711)) + geom_polygon(aes(group=group)) + coord_map() + scale_fill_gradient()
+  ggplot(aes(x=long, y=lat, fill=prec0711)) + geom_polygon(aes(group=group)) + coord_map() +
+  scale_fill_continuous(low='lightcyan2', high='blue', guide='colorbar') +
+  labs(title="Precipitation Levels in US", fill="Prec (inch)")
 ```  
 
