don't echo the libraries

--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -5,7 +5,7 @@ date: "11/21/2020"
 output: html_document
 ---
 
-```{r message=FALSE, warning=FALSE}
+```{r message=FALSE, warning=FALSE, echo=FALSE}
 library(ggplot2)
 library(tidyverse)
 library(dplyr)
