--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -67,7 +67,114 @@ ggplot(Temp3,aes(x=Year,y=Ave_Temp)) + geom_point(color="black") + stat_smooth(m
 
 
 
+## Graphs made for correlation of temperature, precipitation, and # of cases
 
+```{r}
+library(readr)
+library(ggplot2)
+LymeTempPrec<- read_csv("~/Documents/GitHub/DS-202-Final-Project/LymeTempPrec3.csv")
+head(LymeTempPrec)
+```
+
+
+Found averages
+
+```{r}
+library(dplyr)
+means<-LymeTempPrec %>%
+  summarise_at(vars(-state, -full), funs(mean(., na.rm=TRUE)))
+head(means)
+```
+
+Pivoted the data
+
+```{r}
+library(tidyr)
+means<- means %>%
+  pivot_longer(everything(),names_to = "Measure", values_to = "Average")
+head(means)
+```
+Plotted average Lyme
+
+```{r}
+library(stringr)
+avgLyme <- means %>% filter(str_detect(Measure, "^lyme"))
+ggplot(data = avgLyme, aes(x=Measure, y=Average)) + geom_bar(stat = "identity")
+```
+
+```{r}
+avgTemp <- means %>%
+  filter(str_detect(Measure, "^temp"))
+ggplot(data = avgTemp, aes(x=Measure, y=Average)) + geom_bar(stat = "identity")
+```
+
+```{r}
+avgPrec <- means %>%
+  filter(str_detect(Measure, "^prec"))
+ggplot(data = avgPrec, aes(x=Measure, y=Average)) + geom_bar(stat = "identity")
+```
+Found sums
+```{r}
+sums<-LymeTempPrec %>%
+  summarise_at(vars(-state, -full), funs(sum(., na.rm=TRUE)))
+sums<- sums %>%
+  pivot_longer(everything(),names_to = "Measure", values_to = "Total")
+```
+
+```{r}
+sumLyme <- sums %>% filter(str_detect(Measure, "^lyme"))
+ggplot(data = sumLyme, aes(x=Measure, y=Total)) + geom_bar(stat = "identity")
+```
+```{r}
+sumLyme$Measure <- as.factor(avgLyme$Measure)
+sumLyme$Measure <- factor(sumLyme$Measure, levels = c("lyme9296", "lyme9701", "lyme0206", "lyme0711"))
+ggplot(sumLyme, aes(x=Measure, y=Total, color = "darkblue")) +
+  geom_bar(stat = "identity")
+```
+
+
+
+
+```{r}
+avgLyme$Measure <- as.factor(avgLyme$Measure)
+avgLyme$Measure <- factor(avgLyme$Measure, levels = c("lyme9296", "lyme9701", "lyme0206", "lyme0711"))
+ggplot(avgLyme, aes(x=Measure, y=Average)) +
+  geom_bar(stat = "identity")
+```
+```{r}
+avgTemp$Measure <- as.factor(avgTemp$Measure)
+avgTemp$Measure <- factor(avgTemp$Measure, levels = c("temp9296", "temp9701", "temp0206", "temp0711"))
+ggplot(avgTemp, aes(x=Measure, y=Average)) +
+  geom_bar(stat = "identity")
+```
+```{r}
+avgPrec$Measure <- as.factor(avgPrec$Measure)
+avgPrec$Measure <- factor(avgPrec$Measure, levels = c("prec9296", "prec9701", "prec0206", "prec0711"))
+ggplot(avgPrec, aes(x=Measure, y=Average)) +
+  geom_bar(stat = "identity")
+```
+
+
+```{r}
+library(tidyverse)
+LymeTempPrec2<- LymeTempPrec %>%
+  select(full:temp0711)
+new <- LymeTempPrec2 %>%
+  pivot_longer(lyme9296:temp0711, names_to = "measure", values_to = "value")
+new$date<-substr(new$measure, nchar(new$measure) - 3, nchar(new$measure))
+new$measure <- substr(new$measure, 1, 4)
+head(new)
+```
+
+```{r}
+new <- new %>%
+  pivot_wider(names_from = "measure", values_from = "value")
+head(new)
+```
+Lyme disease typically happens around the 60 degrees range. cleaned for better format for the chart.
+```{r}
+new %>%
+  ggplot(aes(x=temp, y=lyme, color=date)) + geom_point()
 
 
 ## Answers to the questions raised
