--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -135,7 +135,7 @@ ggplot(sumLyme, aes(x=Measure, y=Total, color = "darkblue")) +
 
 
 
-
+##Reordered the graphs to go in chronological order
 ```{r}
 avgLyme$Measure <- as.factor(avgLyme$Measure)
 avgLyme$Measure <- factor(avgLyme$Measure, levels = c("lyme9296", "lyme9701", "lyme0206", "lyme0711"))
@@ -172,11 +172,11 @@ new <- new %>%
   pivot_wider(names_from = "measure", values_from = "value")
 head(new)
 ```
-Lyme disease typically happens around the 60 degrees range. cleaned for better format for the chart.
+##Lyme disease typically happens around the 60 degrees range. cleaned for better format for the chart.
 ```{r}
 new %>%
   ggplot(aes(x=temp, y=lyme, color=date)) + geom_point()
-
+##Scatterplot to show what temperatures the most cases occur at
 
 ## Answers to the questions raised
 
