add temp vs cases code

--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -181,3 +181,58 @@ new %>%
 ## Answers to the questions raised
 
 ## Conclusion
+
+```
+
+
+## Grahps for temperature and number of lyme dieases cases
+```{r}
+
+library(ggplot2)
+library(tidyverse)
+library(dplyr)
+library(lubridate)
+library(readxl)
+
+honk <-read.csv("LymeTempPrec.csv")
+View(honk)
+
+
+d9296 <- ggplot(aes(x = temp9296, y = lyme9296
+           ), data=honk) + geom_point() + ggtitle('temp vs lyme disease correlation 1992-1996') + xlab('temperature') + ylab('lyme disease cases')
+d9296
+
+d9701 <- ggplot(aes(x = temp9701, y = lyme9701
+           ), data=honk) + geom_point() + ggtitle('temp vs lyme disease correlation 1997-2001') + xlab('temperature') + ylab('lyme disease cases')
+d9701
+
+d0206 <- ggplot(aes(x = temp0206, y = lyme0206
+           ), data=honk) + geom_point() +  ggtitle('temp vs lyme disease correlation 2002-2006')  + xlab('temperature') + ylab('lyme disease cases')
+d0206
+
+
+d0711 <- ggplot(aes(x = temp0711, y = lyme0711
+           ), data=honk) + geom_point() +  ggtitle('temp vs lyme disease correlation 2007-2011')  + xlab('temperature') + ylab('lyme disease cases')
+d0711
+
+
+Temp<-read.csv("LymeTempPrec.csv")
+Temp %>%
+  group_by(state) %>%
+  ggplot(aes(x=temp9701,y=lyme9701),fill=state) + geom_point() + facet_wrap(~state) +
+  labs(title = "temp vs lyme")
+
+
+ggplot(honk, aes(x = state, weight = temp9701)) + geom_bar() + coord_flip() + ylab('Temp')
+
+
+
+
+```
+
+
+
+
+
+
+
