--- a/Final_Project_Report.Rmd
+++ b/Final_Project_Report.Rmd
@@ -32,6 +32,10 @@ library(RColorBrewer)
 
 ## The exploratory analysis with a few featured infographics
 
+    Lymn disease part: How does rate of Lymn disease change in the U.S. over 20 years.
+    1. 
+    
+
     Temperature part: The change of average temperature in the U.S. and each states may affect the rate of Lymn disease.
     1. Average Temperature of 50 states over 20 years
 ```{r message=FALSE, warning=FALSE, echo=FALSE}
@@ -53,6 +57,9 @@ Temp3<- Temp%>%
 ggplot(Temp3,aes(x=Year,weight=Ave_Temp)) + geom_bar() +
   labs(title = "Average Temperature over 20 years") + theme(plot.title = element_text(hjust = 0.5))
 ```
+
+    3. Precipitation part:
+
 ## Steps for data wrangling and visualization
 
     Temperature part:
@@ -64,68 +71,68 @@ ggplot(Temp3,aes(x=Year,y=Ave_Temp)) + geom_point(color="black") + stat_smooth(m
 
     
     2. See correlation between Temp and Lymn disease.
+      Graphs made for correlation of temperature, precipitation, and # of cases
 
-
-
-## Graphs made for correlation of temperature, precipitation, and # of cases
-
-```{r}
+```{r message=FALSE, warning=FALSE, echo=FALSE}
 library(readr)
 library(ggplot2)
-LymeTempPrec<- read_csv("~/Documents/GitHub/DS-202-Final-Project/LymeTempPrec3.csv")
+LymeTempPrec<- read_csv("LymeTempPrec3.csv")
 head(LymeTempPrec)
 ```
 
 
-Found averages
+    Found averages
 
-```{r}
+```{r message=FALSE, warning=FALSE, echo=FALSE}
 library(dplyr)
 means<-LymeTempPrec %>%
   summarise_at(vars(-state, -full), funs(mean(., na.rm=TRUE)))
 head(means)
 ```
 
-Pivoted the data
+    Pivoted the data
 
-```{r}
+```{r message=FALSE, warning=FALSE, echo=FALSE}
 library(tidyr)
 means<- means %>%
   pivot_longer(everything(),names_to = "Measure", values_to = "Average")
 head(means)
 ```
-Plotted average Lyme
+    
+    Plotted average Lyme
 
-```{r}
+```{r message=FALSE, warning=FALSE, echo=FALSE}
 library(stringr)
 avgLyme <- means %>% filter(str_detect(Measure, "^lyme"))
 ggplot(data = avgLyme, aes(x=Measure, y=Average)) + geom_bar(stat = "identity")
 ```
 
-```{r}
+```{r message=FALSE, warning=FALSE, echo=FALSE}
 avgTemp <- means %>%
   filter(str_detect(Measure, "^temp"))
 ggplot(data = avgTemp, aes(x=Measure, y=Average)) + geom_bar(stat = "identity")
 ```
 
-```{r}
+```{r message=FALSE, warning=FALSE, echo=FALSE}
 avgPrec <- means %>%
   filter(str_detect(Measure, "^prec"))
 ggplot(data = avgPrec, aes(x=Measure, y=Average)) + geom_bar(stat = "identity")
 ```
-Found sums
-```{r}
+    
+    Found sums
+    
+```{r message=FALSE, warning=FALSE, echo=FALSE}
 sums<-LymeTempPrec %>%
   summarise_at(vars(-state, -full), funs(sum(., na.rm=TRUE)))
 sums<- sums %>%
   pivot_longer(everything(),names_to = "Measure", values_to = "Total")
 ```
 
-```{r}
+```{r message=FALSE, warning=FALSE, echo=FALSE}
 sumLyme <- sums %>% filter(str_detect(Measure, "^lyme"))
 ggplot(data = sumLyme, aes(x=Measure, y=Total)) + geom_bar(stat = "identity")
 ```
-```{r}
+```{r message=FALSE, warning=FALSE, echo=FALSE}
 sumLyme$Measure <- as.factor(avgLyme$Measure)
 sumLyme$Measure <- factor(sumLyme$Measure, levels = c("lyme9296", "lyme9701", "lyme0206", "lyme0711"))
 ggplot(sumLyme, aes(x=Measure, y=Total, color = "darkblue")) +
@@ -135,19 +142,19 @@ ggplot(sumLyme, aes(x=Measure, y=Total, color = "darkblue")) +
 
 
 
-```{r}
+```{r message=FALSE, warning=FALSE, echo=FALSE}
 avgLyme$Measure <- as.factor(avgLyme$Measure)
 avgLyme$Measure <- factor(avgLyme$Measure, levels = c("lyme9296", "lyme9701", "lyme0206", "lyme0711"))
 ggplot(avgLyme, aes(x=Measure, y=Average)) +
   geom_bar(stat = "identity")
 ```
-```{r}
+```{r message=FALSE, warning=FALSE, echo=FALSE}
 avgTemp$Measure <- as.factor(avgTemp$Measure)
 avgTemp$Measure <- factor(avgTemp$Measure, levels = c("temp9296", "temp9701", "temp0206", "temp0711"))
 ggplot(avgTemp, aes(x=Measure, y=Average)) +
   geom_bar(stat = "identity")
 ```
-```{r}
+```{r message=FALSE, warning=FALSE, echo=FALSE}
 avgPrec$Measure <- as.factor(avgPrec$Measure)
 avgPrec$Measure <- factor(avgPrec$Measure, levels = c("prec9296", "prec9701", "prec0206", "prec0711"))
 ggplot(avgPrec, aes(x=Measure, y=Average)) +
@@ -155,7 +162,7 @@ ggplot(avgPrec, aes(x=Measure, y=Average)) +
 ```
 
 
-```{r}
+```{r message=FALSE, warning=FALSE, echo=FALSE}
 library(tidyverse)
 LymeTempPrec2<- LymeTempPrec %>%
   select(full:temp0711)
@@ -166,16 +173,18 @@ new$measure <- substr(new$measure, 1, 4)
 head(new)
 ```
 
-```{r}
+```{r message=FALSE, warning=FALSE, echo=FALSE}
 new <- new %>%
   pivot_wider(names_from = "measure", values_from = "value")
 head(new)
 ```
-Lyme disease typically happens around the 60 degrees range. cleaned for better format for the chart.
-```{r}
+    
+    Lyme disease typically happens around the 60 degrees range. cleaned for better format for the chart.
+    
+```{r message=FALSE, warning=FALSE, echo=FALSE}
 new %>%
   ggplot(aes(x=temp, y=lyme, color=date)) + geom_point()
-
+```
 
 ## Answers to the questions raised
 
